[gd_scene load_steps=14 format=3 uid="uid://dm2xydbi1nfek"]

[ext_resource type="Script" path="res://Scripts/tower_1.gd" id="1_eessq"]
[ext_resource type="ArrayMesh" uid="uid://cu1dqly0r08gg" path="res://Scripts/kenney_tower-defense-kit/Models/OBJ format/weapon-cannon.obj" id="2_rjw5h"]
[ext_resource type="Texture2D" uid="uid://bpudnmph6vdpc" path="res://Scripts/kenney_tower-defense-kit/Previews/weapon-cannon.png" id="3_beos3"]
[ext_resource type="AudioStream" uid="uid://ut368x8a40bt" path="res://Assets/Music/purchase-succesful-ingame-230550.mp3" id="4_3c0c4"]
[ext_resource type="AudioStream" uid="uid://qh8rypx7wyu6" path="res://Assets/Music/wood-surface-single-coin-payout-2-215283.mp3" id="5_goyob"]

[sub_resource type="SphereShape3D" id="SphereShape3D_pdps0"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_f6o2i"]
height = 0.001
radius = 0.9

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ijlxx"]
height = 1.2

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_5psj4"]
albedo_color = Color(0, 0.755799, 0.902163, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_tv2sw"]
material = SubResource("ORMMaterial3D_5psj4")
height = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gvocd"]
bg_color = Color(0.252028, 0.252028, 0.252028, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ou16i"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pphci"]
size = Vector2(397, 647)

[node name="Tower1" type="CharacterBody3D" groups=["NoPlace", "Towergro"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.107827, 0)
collision_priority = 4.0
script = ExtResource("1_eessq")

[node name="Towermesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-2, 0, -1.74846e-07, 0, 2, 0, 1.74846e-07, 0, -2, 0, 0, 0)
mesh = ExtResource("2_rjw5h")

[node name="Aim" type="Marker3D" parent="Towermesh"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.382619, 0.267503)

[node name="TowerClick" type="Area3D" parent="Towermesh" groups=["Tower Click", "Towergro"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.430972, 0)
collision_priority = 2.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Towermesh/TowerClick"]
transform = Transform3D(0.800461, 0, 7.10543e-15, 0, 0.800461, 0, -7.10543e-15, 0, 0.800461, 0, -0.125222, 0)
shape = SubResource("SphereShape3D_pdps0")

[node name="Tower space" type="CollisionShape3D" parent="." groups=["NoPlace", "Towergro"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.10023, 0)
shape = SubResource("CylinderShape3D_f6o2i")

[node name="Mob Detect" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0622916, 0.064743, -0.0157132)
collision_layer = 0

[node name="Mob Shape" type="CollisionShape3D" parent="Mob Detect"]
transform = Transform3D(1, 0, 0, 0, 4.6662, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_ijlxx")

[node name="Range view" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.0742012, 0)
transparency = 0.5
mesh = SubResource("CylinderMesh_tv2sw")
skeleton = NodePath("../Towermesh")

[node name="BulletContainer" type="Node" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[node name="Upg_scre" type="CanvasLayer" parent="."]

[node name="Panel2" type="Panel" parent="Upg_scre"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -875.0
offset_top = -263.0
offset_right = -520.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_gvocd")

[node name="VBoxContainer5" type="HBoxContainer" parent="Upg_scre/Panel2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -109.0
offset_top = -51.0
offset_right = 109.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 15

[node name="ATK_lb" type="Label" parent="Upg_scre/Panel2/VBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.760784, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "ATK:"

[node name="Range_lb" type="Label" parent="Upg_scre/Panel2/VBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.83045, 0.593913, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Pierce:"

[node name="SPA_lb" type="Label" parent="Upg_scre/Panel2/VBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0.658824, 0.839216, 1)
theme_override_font_sizes/font_size = 25
text = "SPA:"

[node name="Panel" type="Panel" parent="Upg_scre"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1856.0
offset_top = -279.0
offset_right = -1459.0
offset_bottom = 299.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_gvocd")

[node name="Tower Name" type="Label" parent="Upg_scre/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_top = 16.0
offset_right = 55.0
offset_bottom = 71.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Name"

[node name="Panel" type="Panel" parent="Upg_scre/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -94.0
offset_top = 80.0
offset_right = 94.0
offset_bottom = 258.0
grow_horizontal = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ou16i")

[node name="Weapon-cannon" type="Sprite2D" parent="Upg_scre/Panel/Panel"]
position = Vector2(92.5, 88.5)
scale = Vector2(2.54688, 2.54688)
texture = ExtResource("3_beos3")

[node name="VBoxContainer" type="VBoxContainer" parent="Upg_scre/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = 4.5
offset_right = 126.0
offset_bottom = 107.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="Current_target" type="Label" parent="Upg_scre/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Change Target"

[node name="Target" type="Button" parent="Upg_scre/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="VBoxContainer2" type="VBoxContainer" parent="Upg_scre/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = 147.0
offset_right = -32.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_constants/separation = -5

[node name="Sell_lb" type="Label" parent="Upg_scre/Panel/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "Sell"

[node name="Sell" type="Button" parent="Upg_scre/Panel/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 42

[node name="VBoxContainer3" type="VBoxContainer" parent="Upg_scre/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 143.0
offset_right = 136.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_constants/separation = 0

[node name="Upgrade_lb" type="Label" parent="Upg_scre/Panel/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "Upgrade"

[node name="Upgrade" type="Button" parent="Upg_scre/Panel/VBoxContainer3"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 42
text = "
"

[node name="E panel" type="Panel" parent="Upg_scre/Panel"]
layout_mode = 2
offset_left = 316.0
offset_top = 514.0
offset_right = 348.0
offset_bottom = 554.0

[node name="Press E" type="Label" parent="Upg_scre/Panel/E panel"]
layout_mode = 2
offset_left = 6.0
offset_top = -5.0
offset_right = 26.0
offset_bottom = 44.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "E
"

[node name="X panel" type="Panel" parent="Upg_scre/Panel"]
layout_mode = 0
offset_left = 148.0
offset_top = 514.0
offset_right = 180.0
offset_bottom = 554.0

[node name="Press E" type="Label" parent="Upg_scre/Panel/X panel"]
layout_mode = 2
offset_left = 5.0
offset_top = -5.0
offset_right = 27.0
offset_bottom = 44.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "X
"

[node name="R panel" type="Panel" parent="Upg_scre/Panel"]
layout_mode = 0
offset_left = 306.0
offset_top = 375.0
offset_right = 338.0
offset_bottom = 415.0

[node name="Press E" type="Label" parent="Upg_scre/Panel/R panel"]
layout_mode = 2
offset_left = 5.0
offset_top = -5.0
offset_right = 27.0
offset_bottom = 44.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "R
"

[node name="tOUCH" type="Area2D" parent="Upg_scre"]
process_mode = 3
z_index = 1
position = Vector2(64, 261)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Upg_scre/tOUCH"]
process_mode = 3
z_index = 1
position = Vector2(198.5, 323.5)
shape = SubResource("RectangleShape2D_pphci")

[node name="Buy" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3c0c4")
bus = &"SFX"

[node name="Sell" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_goyob")
bus = &"SFX"

[connection signal="mouse_entered" from="Towermesh/TowerClick" to="." method="_on_tower_click_mouse_entered"]
[connection signal="mouse_exited" from="Towermesh/TowerClick" to="." method="_on_tower_click_mouse_exited"]
[connection signal="body_entered" from="Mob Detect" to="." method="_on_mob_detect_body_entered"]
[connection signal="body_exited" from="Mob Detect" to="." method="_on_mob_detect_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="mouse_entered" from="Upg_scre/Panel2" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Upg_scre/Panel2" to="." method="_on_panel_mouse_exited"]
[connection signal="mouse_entered" from="Upg_scre/Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Upg_scre/Panel" to="." method="_on_panel_mouse_exited"]
[connection signal="pressed" from="Upg_scre/Panel/VBoxContainer/Target" to="." method="_on_target_pressed"]
[connection signal="pressed" from="Upg_scre/Panel/VBoxContainer2/Sell" to="." method="_on_sell_pressed"]
[connection signal="pressed" from="Upg_scre/Panel/VBoxContainer3/Upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="mouse_entered" from="Upg_scre/tOUCH" to="." method="_on_t_ouch_mouse_entered"]
[connection signal="mouse_exited" from="Upg_scre/tOUCH" to="." method="_on_t_ouch_mouse_exited"]
[connection signal="finished" from="Sell" to="." method="_on_sell_finished"]
